solved issue with z-index of wrapper

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ input {
 }
 
 .wrapper{
-    z-index: 99;
+    z-index: -2;
     position: absolute;
     top: 0;
     left: 0;
@@ -262,6 +262,7 @@ input {
     transition: all 0.3s ease-in-out;
 }
 #active:checked ~ .wrapper{
+    z-index: 99;
     position: fixed;
     clip-path: circle(75%);
 }
